# NFL-DFS-Tools

./: README.md  pyproject.toml
distribution_data/: fp_correlations_draftkings.npz  fp_correlations_draftkings.yaml  fp_correlations_fanduel.npz  fp_correlations_fanduel.yaml  fp_distributions_draftkings.csv  fp_distributions_fanduel.csv
src/: nfl_gpp_simulator.py  nfl_showdown_simulator.py
